# QT04

./: .clangd  CMakeLists.txt  README.md  build.ps1  main.cpp  mainwindow.cpp  mainwindow.ui
